# webxtism

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
examples/: count_vowels.rs  host_function.rs  serialize.rs  wasi.rs
src/: context.rs  function.rs  lib.rs  plugin.rs  wasm_input.rs
src/plugin/: kernel.rs  vars.rs
